--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,5 +9,5 @@ web:
     ports:
       - "8082:8082"
 weather:
-    command: --owm_api_key="d43e2343740586bef488b24ff3418c7c"
+    command: --owm_api_key="API_KEY"
     image: weather-srv:latest
