cleanup and build process

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,5 +9,5 @@ web:
     ports:
       - "8082:8082"
 weather:
-    command: --owm_api_key="API_KEY"
+    command: --owm_api_key=""
     image: weather-srv:latest
